--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular2-bootstrap",
+  "name": "angular2-bootstrap-demo-app",
   "version": "0.1.0",
   "description": "Demo application for the angular2-bootstrap project.",
   "repository": {
@@ -22,16 +22,13 @@
     "directories": {},
     "dependencies": {
       "angular2": "npm:angular2@^2.0.0-alpha.27",
+      "angular2-bootstrap": "npm:angular2-bootstrap@^0.2.1",
       "reflect-metadata": "npm:reflect-metadata@^0.1.0",
       "zone.js": "npm:zone.js@^0.5.1"
     },
     "devDependencies": {
-      "traceur": "github:jmcriffey/bower-traceur@0.0.88",
-      "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.88"
+      "traceur": "github:jmcriffey/bower-traceur@0.0.90",
+      "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.90"
     }
-  },
-  "devDependencies": {
-    "http-server": "^0.8.0",
-    "typescript": "^1.5.0-beta"
   }
 }
